<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/screen_bg_color"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_alerts_listview_header_text" />

    <EditText
        android:id="@+id/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress"
        android:padding="10dp" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_alerts_listview_header_text" />

    <EditText
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/layout_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left|center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:minWidth="100dp"
        android:textColor="@color/color_alerts_listview_header_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_time_buyopic_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_alerts_listview_header_text" />

        <TextView
            android:id="@+id/layout_login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:text="@string/register_here"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_alerts_listview_header_text"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>